--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -119,7 +119,7 @@
 					<div class="x_title">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<button th:if="${accreditamentoWrapper.canValutaDomanda and accreditamentoWrapper.canSendValutazione}" type="button" class="btn btn-success pull-right"
+							<button th:if="${accreditamentoWrapper.canConfermaValutazione}" type="button" class="btn btn-success pull-right"
 								th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></button>
 							<!-- mostra showAll -->
 							<button type="button" class="btn btn-primary pull-right ajaxCallShowAll"
