--- a/src/main/resources/templates/provider/providerValidate.html
+++ b/src/main/resources/templates/provider/providerValidate.html
@@ -39,7 +39,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.valutazione} + ' ' + #{label.info_provider}">label.info_provider</h2>
 						<div class="pull-right buttons-header">
-							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formProvider" type="submit"></button>
+							<button th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" form="formProvider" type="submit"></button>
 							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/validate|}"></a>
 						</div>
